All backend in one

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+server.port=${PORT:8080}
+
+jwt.secret=${SECRET:secret}
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
+spring.servlet.multipart.max-file-size=10MB
+
 spring.application.name=backend
