--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,8 @@
 spring.datasource.url=jdbc:h2:mem:/talent_db;DB_CLOSE_DELAY=-1
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
