--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-server.port=${PORT:8080}
+spring.profiles.active=${SPRING_ACTIVE_PROFILE}
+server.port=${PORT}
 
-jwt.secret=${SECRET:secret}
+jwt.secret=${SECRET}
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
 spring.servlet.multipart.max-file-size=10MB
 
-spring.application.name=backend
+spring.application.name=${SPRING_APP_NAME}
+
+aws.bucket.name=${BUCKET}
+aws.bucket.region=${S3_REGION}
+aws.bucket.access-key=${S3_ACCESS_KEY}
+aws.bucket.secret-key=${S3_SECRET_KEY}
